<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:paddingBottom="15dp"
        android:paddingTop="30dp" >

        <ImageView
            android:id="@+id/imageViewRoulette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:contentDescription="@string/content_des"
            android:src="@drawable/roulette" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:gravity="center_vertical|center_horizontal|center" >

        <RadioButton
            android:id="@+id/roulette_simpleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Simple" />

        <RadioButton
            android:id="@+id/columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cols" />

        <RadioButton
            android:id="@+id/am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:gravity="center_vertical|center_horizontal|center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="30dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bets" />

            <Spinner
                android:id="@+id/spRoulette1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BetCost" />

            <EditText
                android:id="@+id/money_bet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >
            </EditText>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp" >

        <Button
            android:id="@+id/roulette_Calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Count" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/roulette_Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/roulette_MoneyLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/roulette_MoneyWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

     <LinearLayout  android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="match_parent"
        android:gravity="bottom" >
        
        <com.google.ads.AdView android:id="@+id/ad"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_alignParentBottom="true"
                           ads:adSize="BANNER"
                           ads:adUnitId="a1510e025a8d52b"
                           ads:loadAdOnCreate="true"/>
    </LinearLayout>
</LinearLayout>