<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/white">
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:paddingBottom="15dp"
        android:paddingTop="30dp" >

        <ImageView
            android:id="@+id/imageViewKino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:contentDescription="@string/content_des"
            android:src="@drawable/kino" />
    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:weightSum="100" android:padding="15dp" android:gravity="center_vertical|center_horizontal|center">

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"

             android:text="@string/KinoNums" android:gravity="center" android:textColor="@color/black"/>

         <Spinner
             android:id="@+id/spKD1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />

         <Button
             android:id="@+id/GenerateKino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Gen" />

     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:gravity="center">

         <TextView
             android:id="@+id/Draw_Rand_Kino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
             android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/black"/>

     </LinearLayout>

</LinearLayout>