<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:paddingBottom="15dp"
        android:paddingTop="30dp" >

        <ImageView
            android:id="@+id/imageViewKino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:contentDescription="@string/content_des"
            android:src="@drawable/kino" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingRight="40dp">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" android:layout_weight="100">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KinoNums"
                android:textColor="@color/black" android:layout_weight="50"/>

            <Spinner
                android:id="@+id/spKino1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" android:layout_weight="100">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contin"
                android:textColor="@color/black" android:layout_weight="50"/>

            <Spinner
                android:id="@+id/spKino2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="32dp"
            android:paddingRight="32dp" android:layout_weight="100">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:text="@string/Multiplier" android:textColor="@color/black" android:layout_weight="50"/>

            <Spinner
                android:id="@+id/spKino3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp" >

        <Button
            android:id="@+id/kino_Calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Count" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/kino_Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/kino_Money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout  android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="match_parent"
        android:gravity="bottom" >
        
        <com.google.ads.AdView android:id="@+id/ad"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_alignParentBottom="true"
                           ads:adSize="BANNER"
                           ads:adUnitId="a1510e025a8d52b"
                           ads:loadAdOnCreate="true"/>
    </LinearLayout>
</LinearLayout>